public abstract class Vehicles {
    public abstract void Start();

    public abstract void Stop();

    public abstract void accelerate();

}
